# mkt-campaign-etl

./: .gitignore  README.md  main.py  operation_elt_time.txt  pyproject.toml
src/: elt.py  etl.py
